--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "sass": "^1.54.5",
     "vite": "^3.0.4"
   }
 }
